Add jackson serde for dropwizard version of jackson

--- a/nd4j-shade/dropwizard/pom.xml
+++ b/nd4j-shade/dropwizard/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>dropwizard</artifactId>
+    <packaging>pom</packaging>
 
 
     <build>
@@ -129,6 +130,21 @@
     are not provided), which
     -->
     <dependencies>
+        <!-- Need ND4J API for the jackson serde stuff -->
+        <dependency>
+            <groupId>org.nd4j</groupId>
+            <artifactId>nd4j-api</artifactId>
+            <version>${project.version}</version>
+            <scope>provided</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.nd4j</groupId>
+                    <artifactId>jackson</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+
         <dependency>
             <groupId>io.dropwizard</groupId>
             <artifactId>dropwizard-core</artifactId>
