--- a/nd4j-shade/jackson/pom.xml
+++ b/nd4j-shade/jackson/pom.xml
@@ -42,8 +42,23 @@
                 </executions>
 
                 <configuration>
+                    <!--
+                    Two important configuration options here:
+                    createDependencyReducedPom: remove the shaded artifacts from the module dependencies. Without this, the
+                                                original dependencies will be shaded, AND still included as transitive deps
+                                                in the final POM. This is not what we want.
+                    shadedArtifactAttached:     If true, the shaded artifact will be a separate JAR file for install, with
+                                                the original un-shaded JAR being separate. With this being set to false,
+                                                the original JAR will be modified, and no extra jar will be produced.
+                    promoteTransitiveDependencies:  This will promote the transitive dependencies of the shaded dependencies
+                                                to direct dependencies. Without this, we need to manually manage the transitive
+                                                dependencies of the shaded artifacts.
+
+                    Note that using <optional>true</optional> in the dependencies also allows the deps to be shaded (and
+                    original dependencies to not be included), but does NOT work with promoteTransitiveDependencies
+                    -->
                     <shadedArtifactAttached>false</shadedArtifactAttached>
-                    <createDependencyReducedPom>false</createDependencyReducedPom>
+                    <createDependencyReducedPom>true</createDependencyReducedPom>
                     <promoteTransitiveDependencies>true</promoteTransitiveDependencies>
 
                     <artifactSet>
@@ -65,59 +80,44 @@
         </plugins>
     </build>
 
-    <!--
-    Regarding dependencies here: Note the <optional>true</optional> configuration.
-    This allows 2 things:
-    (a) These dependencies to be shaded - i.e., are included in the org.nd4j:jackson JARs for install/release etc
-    (b) The original com.fasterxml dependencies will not appear as a transitive dependency
-
-    Other approaches, such as using scopes (provided, runtime, or import) seem to remove both shaded AND transitive dependencies,
-    or keep both. In the case of runtime scope, the original dependencies still show up as a transitive dependency (but
-    are not provided), which is not what we want here.
-    -->
     <dependencies>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
             <version>${jackson.version}</version>
-            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>${jackson.version}</version>
-            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
             <version>${jackson.version}</version>
-            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.jaxrs</groupId>
             <artifactId>jackson-jaxrs-json-provider</artifactId>
             <version>${jackson.version}</version>
-            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-yaml</artifactId>
             <version>${jackson.version}</version>
-            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-xml</artifactId>
             <version>${jackson.version}</version>
-            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-joda</artifactId>
             <version>${jackson.version}</version>
-            <optional>true</optional>
         </dependency>
+
+
 
     </dependencies>
 
