split out the models from the ui module itself
Former-commit-id: 79c4b24bbcf77bb0222d9912a6fbceca362da951

--- a/deeplearning4j-ui-parent/pom.xml
+++ b/deeplearning4j-ui-parent/pom.xml
@@ -13,6 +13,7 @@
     <modules>
         <module>deeplearning4j-ui</module>
         <module>deeplearning4j-ui-components</module>
+        <module>deeplearning4j-ui-model</module>
     </modules>
 
 </project>
