--- a/deeplearning4j-ui-parent/deeplearning4j-ui/pom.xml
+++ b/deeplearning4j-ui-parent/deeplearning4j-ui/pom.xml
@@ -104,5 +104,10 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.deeplearning4j</groupId>
+            <artifactId>deeplearning4j-ui-model</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
